--- a/css/main.css
+++ b/css/main.css
@@ -633,11 +633,16 @@ ul {
 }
 
 .container {
-  width: 480px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -653,6 +658,7 @@ ul {
 }
 
 .header {
+  width: auto;
   position: relative;
   color: #2f303a;
   border-bottom: 1px solid #ececec;
@@ -812,6 +818,7 @@ ul {
 }
 
 .hero {
+  width: auto;
   background-color: #2f303a;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), color-stop(47%, rgba(47, 48, 58, 0.4))), url(../images/hero-img.jpg);
   background-image: linear-gradient(90deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 47%), url(../images/hero-img.jpg);
@@ -848,6 +855,10 @@ ul {
   border-radius: 4px;
   text-align: center;
   color: #ffffff;
+}
+
+.features {
+  width: auto;
 }
 
 .features h3 {
@@ -906,6 +917,7 @@ ul {
 }
 
 .our-work {
+  width: auto;
   padding: 0 15px 94px 15px;
   display: none;
 }
@@ -1037,6 +1049,7 @@ ul {
 }
 
 .clients {
+  width: auto;
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -1095,6 +1108,7 @@ ul {
 }
 
 .footer {
+  width: auto;
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
