--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -30,11 +30,14 @@ ul {
 }
 
 .container {
-  width: $mobile;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+
+  @media screen and (min-width: $mobile) {
+    width: $mobile;
+  }
 
   @media screen and (min-width: $tablet) {
     width: $tablet;
