--- a/css/main.css
+++ b/css/main.css
@@ -657,11 +657,32 @@ ul {
   }
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 .header {
-  width: auto;
+  max-width: 480px;
   position: relative;
   color: #2f303a;
   border-bottom: 1px solid #ececec;
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
 }
 
 .header-nav {
@@ -696,12 +717,36 @@ ul {
   color: #2196f3;
 }
 
+@media screen and (min-width: 768px) {
+  .logo {
+    font-size: 24px;
+  }
+}
+
 .nav {
   display: block;
 }
 
+@media screen and (min-width: 768px) {
+  .nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .nav .item + .item {
   margin-top: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .nav .item + .item {
+    margin-left: 50px;
+    margin-top: 0;
+  }
 }
 
 .contact {
@@ -714,8 +759,39 @@ ul {
   margin-left: auto;
 }
 
-.contact .item + .item {
-  margin-top: 16px;
+@media screen and (min-width: 768px) {
+  .contact {
+    margin-left: 84px;
+    margin-top: 0px;
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 305px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .contact .item + .item {
+    margin-top: 16px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contact .item + .item {
+    margin-top: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact .item + .item {
+    margin-left: 30px;
+  }
 }
 
 .nav .link {
@@ -736,11 +812,18 @@ ul {
   color: #2196f3;
 }
 
+@media screen and (min-width: 768px) {
+  .nav .link {
+    font-size: 14px;
+  }
+}
+
 .contact .link {
   font-size: 18px;
   line-height: 1.15;
   font-weight: 500;
   font-style: normal;
+  vertical-align: middle;
   color: #757575;
   -webkit-transition-property: color;
   transition-property: color;
@@ -754,6 +837,24 @@ ul {
   color: #2196f3;
 }
 
+@media screen and (min-width: 768px) {
+  .contact .link {
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact .link {
+    font-size: 14px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .contact svg {
   margin-right: 10px;
   fill: currentColor;
@@ -762,6 +863,7 @@ ul {
 .header .current {
   position: relative;
   color: #2196f3;
+  padding-bottom: 8px;
 }
 
 .header .current::after {
@@ -801,32 +903,58 @@ ul {
   display: none;
 }
 
+@media screen and (min-width: 767px) {
+  .menu-button {
+    display: none;
+  }
+}
+
 .menu-container {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
   padding-top: 60px;
   padding-bottom: 60px;
   text-align: center;
   background-color: #ffffff;
 }
 
-.menu-container.is-open {
-  display: block;
+@media screen and (max-width: 767px) {
+  .menu-container {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+  }
+  .menu-container.is-open {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 0;
+  }
 }
 
 .hero {
-  width: auto;
+  max-width: 480px;
   background-color: #2f303a;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), color-stop(47%, rgba(47, 48, 58, 0.4))), url(../images/hero-img.jpg);
   background-image: linear-gradient(90deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 47%), url(../images/hero-img.jpg);
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
   padding-top: 118px;
   padding-bottom: 118px;
   text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    width: 768px;
+  }
 }
 
 .hero-header {
@@ -858,7 +986,13 @@ ul {
 }
 
 .features {
-  width: auto;
+  max-width: 480px;
+}
+
+@media screen and (min-width: 768px) {
+  .features {
+    width: 768px;
+  }
 }
 
 .features h3 {
@@ -970,6 +1104,7 @@ ul {
 }
 
 .team {
+  max-width: 480px;
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #f5f4fa;
@@ -983,7 +1118,7 @@ ul {
 }
 
 .team-members .item {
-  width: 450px;
+  max-width: 450px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -995,7 +1130,8 @@ ul {
 
 .team-members .item img {
   display: block;
-  width: 450px;
+  max-width: 100%;
+  height: auto;
 }
 
 .team-members .member-about {
@@ -1049,7 +1185,7 @@ ul {
 }
 
 .clients {
-  width: auto;
+  max-width: 480px;
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -1077,10 +1213,6 @@ ul {
 }
 
 .client-list .client-link {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 83px;
-  padding-right: 83px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1261,5 +1393,394 @@ ul {
 
 .footer-social .social-item:not(:first-child) {
   margin-left: 10px;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  padding-top: 93px;
+  padding-bottom: 93px;
+  padding-left: 15px;
+  padding-right: 15px;
+  overflow-y: scroll;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  position: relative;
+  max-width: 450px;
+  background-color: #fff;
+  padding: 40px;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.backdrop .btn {
+  display: block;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  padding: 10px;
+  fill: #212121;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop .btn:hover, .backdrop .btn:focus {
+  fill: #2196f3;
+}
+
+.backdrop .close-btn {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.backdrop .callback-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 12px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.backdrop .callback-form .input:focus {
+  border-color: #2196f3;
+  outline: none;
+  cursor: pointer;
+}
+
+.backdrop .callback-form .input:hover {
+  cursor: pointer;
+}
+
+.backdrop h1 {
+  text-align: center;
+  font-size: 20px;
+  line-height: 1.15;
+}
+
+.backdrop .label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  color: #757575;
+  font-size: 12px;
+  line-height: 1.12;
+}
+
+.backdrop .label:not(:first-child) {
+  margin-top: 10px;
+}
+
+.backdrop .input {
+  margin-top: 4px;
+  width: 100%;
+  height: 40px;
+  padding: 11px;
+  padding-left: 42px;
+  border: 1px solid rgba(2, 1, 1, 0.2);
+  border-radius: 4px;
+  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop .input.textarea {
+  height: 120px;
+  padding: 12px 16px;
+  resize: none;
+}
+
+.backdrop .input.textarea::-webkit-input-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.backdrop .input.textarea:-ms-input-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.backdrop .input.textarea::-ms-input-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.backdrop .input.textarea::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.callback-form .submit-btn {
+  margin-top: 30px;
+  width: 200px;
+  height: 50px;
+  border: none;
+  border-radius: 4px;
+  color: #ffffff;
+  font-size: 16px;
+  line-height: 2;
+  font-weight: bold;
+  letter-spacing: 0.06em;
+  background-color: #2196f3;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.callback-form .submit-btn:active {
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  background-color: #2196f3;
+  border: none;
+  outline: none;
+}
+
+.checkbox {
+  position: absolute;
+  left: 5%;
+  top: 50%;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.backdrop .license-text {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin-left: 20px;
+  font-size: 12px;
+  line-height: 2;
+}
+
+.backdrop .license-text::before {
+  position: absolute;
+  left: 0;
+  display: block;
+  content: '';
+  width: 16px;
+  height: 15px;
+  border: 2px solid black;
+  border-radius: 2px;
+}
+
+.backdrop .license-agreement {
+  color: #2196f3;
+  text-decoration: underline;
+}
+
+.label.license {
+  position: relative;
+  margin-top: 20px;
+}
+
+.callback-form .checkbox:checked + .license-text::before {
+  border: none;
+  background-image: url(../images/svg/icon-check.svg);
+}
+
+.callback-form .label {
+  position: relative;
+}
+
+.form-svg {
+  position: absolute;
+  fill: black;
+  top: 50%;
+  left: 15px;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.callback-form .input:focus + .form-svg {
+  fill: #2196f3;
+}
+
+.portfolio .filter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-left: -8px;
+}
+
+.filter-btn {
+  padding: 6px 22px;
+  color: #2f303a;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  text-align: center;
+  border: none;
+  -webkit-transition-property: color, background-color, -webkit-box-shadow;
+  transition-property: color, background-color, -webkit-box-shadow;
+  transition-property: color, background-color, box-shadow;
+  transition-property: color, background-color, box-shadow, -webkit-box-shadow;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.filter-btn:hover, .filter-btn:focus {
+  background-color: #2196f3;
+  color: #ffffff;
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.portfolio .item {
+  margin-left: 4px;
+  margin-right: 4px;
+}
+
+@media screen and (max-width: 768px) {
+  .portfolio .item {
+    margin-top: 7px;
+    margin-bottom: 8px;
+  }
+}
+
+.portfolio {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.cards {
+  display: block;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 40px;
+  margin-bottom: 30px;
+}
+
+.card {
+  width: auto;
+  margin-bottom: 30px;
+  -webkit-transition-property: -webkit-box-shadow;
+  transition-property: -webkit-box-shadow;
+  transition-property: box-shadow;
+  transition-property: box-shadow, -webkit-box-shadow;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card:nth-child(3n + 1) {
+  margin-left: auto;
+}
+
+.card:hover .overlay {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.card:hover, .card:focus {
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.card-img,
+.our-work-img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.card .card-bottom {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 24px;
+  border: 1px solid #eeeeee;
+  border-top: none;
+}
+
+.card .card-header {
+  font-size: 18px;
+  line-height: 2;
+}
+
+.card .card-text {
+  margin-top: 4px;
+  font-size: 16px;
+  line-height: 1.9;
+}
+
+.card-overlay {
+  position: relative;
+  overflow: hidden;
+}
+
+.card .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
+  color: #ffffff;
+  font-size: 18px;
+  line-height: 1.56;
+  background-color: #2196f3;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*# sourceMappingURL=main.css.map */
