--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -5,6 +5,13 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+
+  padding-top: 93px;
+  padding-bottom: 93px;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
@@ -16,12 +23,12 @@
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  min-width: 480px;
-  min-height: 580px;
+  position: relative;
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
+  max-width: 450px;
+  // min-height: 580px;
   background-color: #fff;
 
   padding: 40px;
