--- a/sass/components/_portfolio-filter.scss
+++ b/sass/components/_portfolio-filter.scss
@@ -1,6 +1,8 @@
 .portfolio .filter {
   display: flex;
-  justify-content: center;
+
+  flex-wrap: wrap;
+  margin-left: -8px;
 }
 
 .filter-btn {
@@ -27,6 +29,12 @@
   }
 }
 
-.portfolio .item + .item {
-  margin-left: 8px;
+.portfolio .item {
+  margin-left: 4px;
+  margin-right: 4px;
+
+  @media screen and (max-width: $tablet) {
+    margin-top: 7px;
+    margin-bottom: 8px;
+  }
 }
