--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,19 +1,19 @@
 .portfolio {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
-
 .cards {
-  display: flex;
+  display: block;
   flex-wrap: wrap;
-  margin-top: 50px;
-  margin-bottom: -30px;
+  margin-top: 40px;
+  margin-bottom: 30px;
 }
 
 .card {
-  margin-left: 30px;
+  width: auto;
+  // margin-left: 30px;
   margin-bottom: 30px;
-  width: calc((100% - 60px) / 3);
+  // width: calc((100% - 60px) / 3);
 
   transition-property: box-shadow;
   transition-duration: 250ms;
@@ -35,10 +35,10 @@
 }
 
 .card-img,
-our-work-img {
+.our-work-img {
   display: block;
-  width: 370px;
-  height: 294px;
+  width: 100%;
+  height: auto;
 }
 
 .card .card-bottom {
