--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,7 @@
 @import './components/team';
 @import './components/clients';
 @import './components/footer';
-// @import './components/modal';
-// @import './components/modal-form';
-// @import './components/portfolio-filter';
-// @import './components/portfolio';
+@import './components/modal';
+@import './components/modal-form';
+@import './components/portfolio-filter';
+@import './components/portfolio';
