--- a/sass/components/_our-work.scss
+++ b/sass/components/_our-work.scss
@@ -2,6 +2,10 @@
   width: auto;
   padding: 0 15px 94px 15px;
   display: none;
+
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
 }
 
 .our-work-photo {
