--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,7 +1,11 @@
 .clients {
-  max-width: 480px;
   padding-top: 60px;
   padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .clients h2 {
@@ -17,11 +21,25 @@
   flex-wrap: wrap;
   width: 100%;
   // justify-content: space-between;
+
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+  }
 }
 
 .client-list .item {
-  width: calc((100% - 4 * 15px) / 2);
   margin: 15px;
+  @media screen and (max-width: 767px) {
+    width: calc((100% - 4 * 15px) / 2);
+  }
+
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 6 * 15px) / 3);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 12 * 15px) / 6);
+  }
 }
 
 .client-list .client-link {
