--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  max-width: 480px;
+  max-width: 1600px;
   background-color: $secondary-background-color;
 
   background-image: linear-gradient(
@@ -7,7 +7,7 @@
       rgba(47, 48, 58, 0.4) 0%,
       rgba(47, 48, 58, 0.4) 47%
     ),
-    url(../images/hero-img.jpg);
+    url(/images/hero-img_480.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -16,7 +16,13 @@
   text-align: center;
 
   @media screen and (min-width: $tablet) {
-    width: 768px;
+  }
+
+  @media screen and (min-width: $desktop) {
+  }
+
+  @media screen and (min-device-pixel-ratio: 1.4) {
+    background-image: url(../../images/hero-img_480@2.jpg);
   }
 }
 
