--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,9 +24,7 @@
 
 .modal {
   position: relative;
-  // top: 50%;
-  // left: 50%;
-  // transform: translate(-50%, -50%);
+
   max-width: 450px;
   // min-height: 580px;
   background-color: #fff;
@@ -35,6 +33,12 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  @media screen and (min-width: 480px) {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
 
 .backdrop .btn {
