--- a/sass/components/_portfolio-filter.scss
+++ b/sass/components/_portfolio-filter.scss
@@ -3,6 +3,10 @@
 
   flex-wrap: wrap;
   margin-left: -8px;
+
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+  }
 }
 
 .filter-btn {
