--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -7,6 +7,11 @@
   flex-wrap: wrap;
   margin-top: 40px;
   margin-bottom: 30px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .card {
@@ -31,6 +36,15 @@
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 6 * 15px) / 3);
   }
 }
 
