--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,5 +1,4 @@
 .team {
-  max-width: 480px;
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #f5f4fa;
@@ -11,6 +10,13 @@
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
+
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -15px;
+    margin-right: -15px;
+  }
 }
 
 .team-members .item {
@@ -18,9 +24,22 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  overflow: hidden;
 
   & + .item {
-    margin-top: 30px;
+    @media screen and (max-width: 767px) {
+      margin-top: 30px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    margin: 15px;
+    width: calc((100% - 4 * 15px) / 2);
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin: 15px;
+    width: calc((100% - 8 * 15px) / 4);
   }
 }
 
@@ -32,7 +51,14 @@
 
 .team-members .member-about {
   background-color: #fff;
-  padding: 30px 122px;
+  padding-top: 30px;
+  padding-bottom: 24px;
+  padding-left: 74px;
+  padding-right: 74px;
+
+  @media screen and (min-width: 1200px) {
+    padding: 30px;
+  }
 }
 
 .member-about-description {
@@ -42,7 +68,7 @@
 .social {
   display: flex;
   margin-top: 16px;
-  justify-content: space-around;
+  justify-content: center;
   align-content: center;
   text-align: center;
 }
