--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -22,7 +22,7 @@
   }
 
   @media screen and (min-device-pixel-ratio: 1.4) {
-    background-image: url(../../images/hero-img_480@2.jpg);
+    background-image: url(/images/hero-img_480@2.jpg);
   }
 }
 
