--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -7,7 +7,7 @@
       rgba(47, 48, 58, 0.4) 0%,
       rgba(47, 48, 58, 0.4) 47%
     ),
-    url(/images/hero-img_480.jpg);
+    url(../images/hero-img_480.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -15,15 +15,59 @@
   padding-bottom: 118px;
   text-align: center;
 
+  @media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+      90deg,
+      rgba(47, 48, 58, 0.4) 0%,
+      rgba(47, 48, 58, 0.4) 47%
+    ),
+    url(../images/hero-img_480@2.jpg);
+  }
+
   @media screen and (min-width: $tablet) {
+    background-image: linear-gradient(
+      90deg,
+      rgba(47, 48, 58, 0.4) 0%,
+      rgba(47, 48, 58, 0.4) 47%
+    ),
+    url(../images/hero-img_768.jpg);
+    @media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+      90deg,
+      rgba(47, 48, 58, 0.4) 0%,
+      rgba(47, 48, 58, 0.4) 47%
+    ),
+    url(../images/hero-img_768@2.jpg);
+  }
   }
 
   @media screen and (min-width: $desktop) {
+    padding-top: 200px;
+  padding-bottom: 200px;         
+    background-image: linear-gradient(
+      90deg,
+      rgba(47, 48, 58, 0.4) 0%,
+      rgba(47, 48, 58, 0.4) 47%
+    ),
+    url(../images/hero-img_1200.jpg);
+
+    @media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+      90deg,
+      rgba(47, 48, 58, 0.4) 0%,
+      rgba(47, 48, 58, 0.4) 47%
+    ),
+    url(../images/hero-img_1200@2.jpg);
+  }
   }
 
-  @media screen and (min-device-pixel-ratio: 1.4) {
-    background-image: url(/images/hero-img_480@2.jpg);
-  }
+  
 }
 
 .hero-header {
