adds fixes to hero and footer

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -81,7 +81,10 @@
     margin-top: 60px;
     margin-left: auto;
     margin-right: auto;
+    
   }
+
+  
 
   @media screen and (min-width: 1200px) {
     margin-left: 93px;
@@ -165,6 +168,7 @@
   line-height: 1.14;
   text-transform: uppercase;
   color: #fff;
+  text-align: left;
 }
 
 .footer-social {
