--- a/css/main.css
+++ b/css/main.css
@@ -944,6 +944,8 @@ body.modal-open {
 .hero {
   max-width: 1600px;
   background-color: #2f303a;
+  margin-left: auto;
+  margin-right: auto;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), color-stop(47%, rgba(47, 48, 58, 0.4))), url(../images/hero-img_480.jpg);
   background-image: linear-gradient(90deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 47%), url(../images/hero-img_480.jpg);
   background-size: cover;
@@ -1582,6 +1584,7 @@ body.modal-open {
   line-height: 1.14;
   text-transform: uppercase;
   color: #fff;
+  text-align: left;
 }
 
 .footer-social {
