--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,8 @@
 .hero {
   max-width: 1600px;
   background-color: $secondary-background-color;
+  margin-left: auto;
+  margin-right: auto;
 
   background-image: linear-gradient(
       90deg,
